// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generate (rule options list) displays default column even when only falsy value, hiding deprecated/required cols with only falsy value generates the documentation 1`] = `
"# test/no-foo

<!-- end auto-generated rule header -->
## Options
<!-- begin auto-generated rule options list -->

| Name  | Default |
| :---- | :------ |
| \`foo\` | \`false\` |

<!-- end auto-generated rule options list -->"
`;

exports[`generate (rule options list) generates the documentation 1`] = `
"# test/no-foo

💼 This rule is enabled in the following configs: 🌐 \`all\`, ✅ \`recommended\`.

🔧💡 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix) and manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).

📝 Description of no-foo.

<!-- end auto-generated rule header -->
## Rule details

details

## Options

optionToDoSomething1 - explanation
optionToDoSomething2 - explanation
"
`;

exports[`generate (rule options list) with no marker comments generates the documentation 1`] = `
"# test/no-foo

<!-- end auto-generated rule header -->
## Options

foo
"
`;

exports[`generate (rule options list) with no options generates the documentation 1`] = `
"# test/no-foo

<!-- end auto-generated rule header -->

<!-- begin auto-generated rule options list -->



<!-- end auto-generated rule options list -->"
`;

exports[`generate (rule options list) with string that needs to be escaped in table generates the documentation 1`] = `
"# test/no-foo

<!-- end auto-generated rule header -->
## Options
<!-- begin auto-generated rule options list -->

| Name  | Description           | Type           |
| :---- | :-------------------- | :------------- |
| \`foo\` | test<br/>        desc | String\\|number |

<!-- end auto-generated rule options list -->"
`;
